feat(api): add regional routing levels
